cabal-version:      3.0
name:               cardano-mixer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Vladimir Sinyakov
maintainer:         devteam@cardmix.io

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

flag testnet
    description:
        Builds executables for testnet.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall
      -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -fwarn-redundant-constraints
      -Widentities -rtsopts
      -- See Plutus Tx readme
      -fno-specialise -fno-strictness -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -- if flag(defer-plugin-errors)
    --   ghc-options:
        -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      MixerContract
      MixerState
      MixerScript
      MixerUserData
      MixerProofs
      ClientLog
      Contracts.AdminDecision
      Contracts.Currency
      Contracts.Vesting
      PAB
      Requests
      Utility
      Configuration.PABConfig
      Configuration.QAPConfig
      Tokens.AdminToken
      Tokens.RelayToken
      Tokens.Common
      Tokens.MIXStakingToken
      Tokens.MIXToken
      Tokens.OracleToken
      Crypto
      Crypto.ZKSNARK
      Crypto.R1CS
      Crypto.MerkleTree
      Crypto.DFT
      Crypto.BLS12381
      Crypto.Curve
      Crypto.Extension
      Crypto.Polynomial
      Crypto.Zp
      Crypto.Conversions
            
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      extra                                  -any,
      freer-extras                           -any,
      freer-simple                           -any,
      flat                                   -any,
      lens                                   -any,
      mtl                                    -any,
      openapi3                               -any,
      playground-common                      -any,
      plutus-contract                        -any,
      plutus-core                            -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-pab                             -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: src

executable cardano-mixer-pab
  import: lang
  main-is: mixer-pab.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    aeson                                  -any,
    base                          >= 4.9 && < 5,
    bytestring                             -any,
    cardano-mixer                          -any,
    cardano-api                            -any,
    containers                             -any,
    data-default                           -any,
    freer-extras                           -any,
    freer-simple                           -any,
    openapi3                               -any,
    plutus-contract                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-ledger-constraints              -any,
    plutus-pab                             -any,
    plutus-tx                              -any,
    plutus-use-cases                       -any,
    prettyprinter                          -any,    
    text                                   -any
    
executable cardano-mixer-client
  import: lang
  main-is: mixer-client.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    aeson                                  -any,
    base                          >= 4.9 && < 5,
    bytestring                             -any,
    cardano-mixer                          -any,
    containers                             -any,
    data-default                           -any,
    freer-extras                           -any,
    freer-simple                           -any,
    plutus-contract                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-pab                             -any,
    plutus-tx                              -any,
    plutus-use-cases                       -any,
    prettyprinter                          -any,
    regex-tdfa                      ^>= 1.3.1.0,
    req                               ^>= 3.9.0,
    text                                   -any,
    uuid                                   -any,
    
    
executable cardano-mixer-qap
  import: lang
  main-is: mixer-qap.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    aeson                                  -any,
    base                          >= 4.9 && < 5,
    bytestring                             -any,
    cardano-mixer                          -any,
    containers                             -any,
    data-default                           -any,
    freer-extras                           -any,
    freer-simple                           -any,
    plutus-contract                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-pab                             -any,
    plutus-tx                              -any,
    plutus-use-cases                       -any,
    prettyprinter                          -any,
    regex-tdfa                      ^>= 1.3.1.0,
    text                                   -any
    
    
executable cardano-mixer-zksnark-setup
  import: lang
  main-is: mixer-zksnark-setup.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    aeson                                  -any,
    base                          >= 4.9 && < 5,
    bytestring                             -any,
    cardano-mixer                          -any,
    containers                             -any,
    data-default                           -any,
    freer-extras                           -any,
    freer-simple                           -any,
    plutus-contract                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-pab                             -any,
    plutus-tx                              -any,
    plutus-use-cases                       -any,
    prettyprinter                          -any,
    regex-tdfa                      ^>= 1.3.1.0,
    text                                   -any
    
    
executable cardano-mixer-client-psgenerator
    main-is:          mixer-client-psgenerator.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0

    build-depends:
        aeson                                -any,
        aeson-pretty                         -any,
        async                                -any,
        base                          >=4.9 && <5,
        bytestring                           -any,
        cardano-mixer                        -any,
        containers                           -any,
        contra-tracer                        -any,
        data-default                         -any,
        filepath                             -any,
        freer-extras                         -any,
        freer-simple                         -any,
        iohk-monitoring                      -any,
        lens                                 -any,
        lobemo-backend-ekg                   -any,
        monad-logger                         -any,
        mtl                                  -any,
        optparse-applicative                 -any,
        playground-common                    -any,
        plutus-contract                      -any,
        plutus-ledger                        -any,
        plutus-pab                           -any,
        plutus-tx                            -any,
        plutus-use-cases                     -any,
        prettyprinter                   >=1.1.0.1,
        purescript-bridge                    -any,
        row-types                            -any,
        servant-client                       -any,
        servant-purescript                   -any,
        servant-server                       -any,
        text                                 -any,
        time-units                           -any,
        unliftio-core                        -any,
        uuid                                 -any,
        yaml                                 -any,
    
    
    
